working with NavBar from bootstrap

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="My protofolio"
     />
+    <script src="https://kit.fontawesome.com/124769e30d.js" crossorigin="anonymous"></script>
     <title>IAmFara</title>
   </head>
   <body>
