Reading skills from DB

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,6 +8,7 @@
       content="My protofolio"
     />
     <script src="https://kit.fontawesome.com/124769e30d.js" crossorigin="anonymous"></script>
+    <meta id="corelationIdHolder" name="corelationId" value="" />
     <title>IAmFara</title>
   </head>
   <body>
